--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,9 @@
   "description": "Deimos ImaginariumSDK",
   "keywords": [
     "deimos",
-    "tmp",
-    "temp",
-    "file"
+    "image",
+    "sdk",
+    "imaginarium"
   ],
   "license": "MIT",
   "authors": [
