--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
     }
   ],
   "require": {
-    "php": "^5.6 || ^7.0"
+    "php": "^7.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "5.7.5"
+    "phpunit/phpunit": "^6.0"
   },
   "autoload": {
     "psr-4": {
